<resources>
    <string name="app_name">HUG</string>

    <!-- 하단 메뉴 타이틀 -->
    <string name="title_home">HUG</string>
    <string name="title_shelter_info">청소년 쉼터란?</string>
    <string name="title_shelter_list">쉼터 리스트</string>
    <string name="title_shelter_search">근처 쉼터 찾기</string>
    <string name="title_chat">1대1 상담</string>

    <!-- TextView 타이틀 string values -->
    <string name="txt_title_sex">성별</string>
    <string name="txt_title_period">기간</string>
    <string name="txt_title_location">위치</string>
    <string name="txt_title_phone">전화번호</string>
    <string name="txt_title_birth">생년월일</string>

    <!--  도시 이름  -->
    <string name="seoul">서울시</string>
    <string name="incheon">인천시</string>
    <string name="gyunggi">경기도</string>

    <!--  청소년 쉼터란?  -->
    <string name="txt_title_shelterinfo">선생님! 청소년 쉼터는 어떤 곳이죠?</string>

    <!--  가까운쉼터 찾기  -->
    <string name="txt_search">학교에서 제일 가까운 쉼터가 궁금하신가요?\n 검색하시면 알려드립니다!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>